<resources>
    <string name="app_name">Oladoc</string>
    <string name="mobile_number_e_g_3001234567">Mobile number e.g 3001234567</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="my_profiles">My Profiles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_appointments">My Appointments</string>
    <string name="no_appointments">No Appointments</string>
    <string name="give_your_feedback_to_oladoc">Give your Feedback to oladoc</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="you_have_no_upcoming_appointments">You have no upcoming appointments</string>
    <string name="any_feedback_or_suggestion_about_your_experience_on_oladoc">Any feedback or suggestion about your experience on oladoc</string>
    <string name="suggestion_or_feedback">Suggestion or Feedback</string>
    <string name="star">*</string>
    <string name="back">Back</string>
    <string name="no_result_found">No result Found</string>
    <string name="medical_records">Medical Records</string>
    <string name="all_your_medical_records_in_one_place">All your medical records in one place</string>
    <string name="access_prescriptions_reports_and_more_on_the_go">Access prescriptions,reports and more, on the go</string>
    <string name="never_lose_your_medical_records">Never lose your medical records</string>
    <string name="all_specializations">All Specializations</string>
    <string name="all_videos_and_articles">All Videos and Articles</string>
    <string name="connect_now">Connect Now</string>
    <string name="discounts_on_elective_procedures_and_sugeries">Discounts on elective procedures and sugeries</string>
    <string name="skin_specialist">Skin Specialist</string>
    <string name="urologist">Urologist</string>
    <string name="gynecologist">Gynecologist</string>
    <string name="child_specialist">Child Specialist</string>
    <string name="orthopedic_surgeon">Orthopedic Surgeon</string>
    <string name="consultant_physician">Consultant Physician</string>
    <string name="discounts_on_medicine_and_lab_tests">Discounts on medicine and lab tests</string>
    <string name="discounts_on_in_clinic_doctor_bookings">Discounts on in-clinic doctor bookings</string>
    <string name="latest_on_healthzone">Latest on Healthzone</string>
    <string name="consultant_physiciann">Consultant Physician</string>
    <string name="orthopedic_surgeonn">Orthopedic Surgeon</string>
    <string name="urologistt">Urologist</string>
    <string name="gynecologistt">Gynecologist</string>
    <string name="skin_specialistt">Skin Specialist</string>
    <string name="discounted_medicines">Discounted Medicines</string>
    <string name="childspecialist">Child Specialist</string>
    <string name="_5_29_7">5.29.7</string>
    <string name="procedures_and_surgeries">Procedures and Surgeries</string>
    <string name="i_am_looking_for">I am looking for</string>
    <string name="in_clinic_appointments">In-Clinic Appointments</string>
    <string name="consult_online_now">Consult Online Now</string>
    <string name="laboratory_tests">Laboratory Tests</string>
    <string name="got_a_health_subsrciption_plan">Got a Health Subsrciption Plan?</string>
    <string name="free_video_consultation_with_top_doctors">Free video consultation with top doctors</string>
    <string name="online_doctors">online doctors</string>
    <string name="clinic_appointments">Clinic Appointments</string>
    <string name="lab_tests">lab tests</string>
    <string name="surgeries">surgeries</string>
    <string name="logo">logo</string>
    <string name="pic">pic</string>
    <string name="give_your_feedback_To_oladoc">Give your Feedback to oladoc</string>
    <string name="enter_your_details_here">Enter your details here</string>
    <string name="brain_and_spine">Brain and Spine</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add_medical_record">Add medical record</string>
</resources>