<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentsFragment"
    android:id="@+id/appointmentsFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_gravity="center"
            android:text="@string/my_appointments"
            android:textSize="@dimen/_30ssp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="346dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/no_appointments"
            android:src="@drawable/calendar"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/you_have_no_upcoming_appointments"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

</ScrollView>
