<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordsFragment"
    android:id="@+id/recordsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="60dp"
            android:text="@string/medical_records"
            android:textSize="30sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/records_img"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_your_medical_records_in_one_place"
        android:layout_marginTop="360dp"
        android:layout_marginStart="80dp"
        android:textSize="16sp"
        />

    <ImageView
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:id="@+id/imageView3"
                android:src="@drawable/tick"
                android:layout_marginTop="400dp"
                android:layout_marginStart="50dp"
    />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="1dp"
        android:text="Never lose your medical records"
        android:textSize="14sp" />

        <ImageView
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:id="@+id/imageView4"
                android:src="@drawable/tick"
                android:layout_marginTop="440dp"
                android:layout_marginStart="50dp"
                />

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="440dp"
                android:layout_marginEnd="1dp"
                android:text="@string/access_prescriptions_reports_and_more_on_the_go"
                android:textSize="14sp" />


    <ImageView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:id="@+id/imageView5"
        android:src="@drawable/tick"
        android:layout_marginTop="480dp"
        android:layout_marginStart="50dp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="1dp"
        android:text="@string/never_lose_your_medical_records"
        android:textSize="14sp" />

    <Button
        android:id="@+id/addMedicalRecordButton"
        android:layout_width="233dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_450sdp"
        android:backgroundTint="@color/blue"
        android:text="@string/add_medical_record" />
</FrameLayout>